--- a/articles/genomics/TOC.yml
+++ b/articles/genomics/TOC.yml
@@ -29,7 +29,7 @@
       href: troubleshooting-guide-genomics.md
     - name: サポート要求を提出する
       href: file-support-ticket-genomics.md
-    - name: バージョンのリリース履歴
+    - name: バージョン リリース履歴
       href: version-release-history-genomics.md
     - name: ビジネス継続性
       href: business-continuity-genomics.md
